Develop (#11)
* Add scan entity and view (#2)

* Feature/add dashboard (#3)

* Add dashboard

* Show data in dashboard

* Apply refactor for hexagonal architecture (#4)

* Stop timer in dashboard when the user leaves the page (#5)

* Refactor tree view menu and change login theme

* Add menu theme (#6)

* Feature/arrange dashboard (#7)

* Refactor dashboard

* Apply collapsable dashboard

* Refactor en dashboard

* Refactor for best practices

* Add dashboard for tracking

* Add filters to seguimiento dashboard

* Add database configs

---------

Co-authored-by: mkernel <midesatech@gmail.com>

* Add alert when database is not reached (#8)

Co-authored-by: mkernel <midesatech@gmail.com>

* Add database field in db config (#9)

Co-authored-by: mkernel <midesatech@gmail.com>

* Feature/add deltas and Z flow (#10)

* Add delta time

* Add scrollpane to route flow

* Add z flow

---------

Co-authored-by: mkernel <midesatech@gmail.com>

* add packages

* refactor

---------

Co-authored-by: MIDESATECH -JDEPAZ- <39348976+midesatech@users.noreply.github.com>
Co-authored-by: mkernel <midesatech@gmail.com>